objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Call Center%2FFMO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Compliance</fullName>
        </values>
        <values>
            <fullName>Data Transfer</fullName>
        </values>
        <values>
            <fullName>Enrollment</fullName>
        </values>
        <values>
            <fullName>Kick-off Meeting</fullName>
        </values>
        <values>
            <fullName>Marketing</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Training</fullName>
        </values>
        <values>
            <fullName>Verbal Yes</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Individual Producer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1st Meeting</fullName>
        </values>
        <values>
            <fullName>Application</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Compliance</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Verbal Yes</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>List Bill</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Admin123</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Enrollment</fullName>
        </values>
        <values>
            <fullName>Invoice Review</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Welcome</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACH_Auth_Form_Voided_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Auth Form &amp; Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctOpp_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AcctOpp Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_in_Admin123__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active in Admin123</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affinity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affinity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Affinity)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affinity_percent__c</fullName>
        <label>Affinity %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Affinity_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <inlineHelpText>Agent ID from Admin123</inlineHelpText>
        <label>Agent ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Admin_Comm_percentage__c</fullName>
        <label>Annual Admin Comm %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Admin_Fee_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Admin Fee Paid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Annual Admin Fee Paid)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Admin_Fee__c</fullName>
        <label>Annual Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Memberships__c</fullName>
        <formula>Monthly_Memberships__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Approved_Date__c</fullName>
        <label>Application Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Link_Sent_Date__c</fullName>
        <label>Application Link Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Link_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Link Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Check_Date__c</fullName>
        <label>Background Check Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Background_Check_Sent_Date__c</fullName>
        <label>Background Check Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Background_Check_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corp</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                    <isActive>false</isActive>
                    <label>Corporation</label>
                </value>
                <value>
                    <fullName>Incorporated</fullName>
                    <isActive>false</isActive>
                    <label>Incorporated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Call Center)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Center_percent__c</fullName>
        <label>Call Center %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Call_Center_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Census__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>An .xls or .csv file is preferred</inlineHelpText>
        <label>Census</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Executed_Date__c</fullName>
        <label>Contract Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Level__c</fullName>
        <label>Contract Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Contract_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Employee_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Employee Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_Monthly_Contribution_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Monthly Contribution Amt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_No_of_Enrolled_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct No. of Enrolled Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deck_Page_Received_Date__c</fullName>
        <label>Deck Page Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deck_Page_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deck Page Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographic_Groups__c</fullName>
        <label>Demographic Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latin/Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DocuSign Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DocuSign Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_O_Date__c</fullName>
        <label>E&amp;O Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>E_O_Link_Sent_Date__c</fullName>
        <label>E&amp;O Link Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>E_O_Link_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E&amp;O Link Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_O__c</fullName>
        <inlineHelpText>If E&amp;O is &apos;Current&apos;, please upload to Files section.</inlineHelpText>
        <label>E&amp;O</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Link__c</fullName>
        <label>Enrollment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrollment_Method__c</fullName>
        <label>Enrollment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Enrollment</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>OneShare Health Call Center</fullName>
                    <isActive>false</isActive>
                    <label>OneShare Health Call Center</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Participation__c</fullName>
        <label>Estimated Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White/Caucasian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Export_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Export documents to Admin123</inlineHelpText>
        <label>Export Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (FMO)</relationshipLabel>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMO_percent__c</fullName>
        <label>FMO %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FMO_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <label>Full Time Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Many_Locations__c</fullName>
        <label>How Many Locations</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Created_Date__c</fullName>
        <label>LOI Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Executed_Date__c</fullName>
        <label>LOI Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_SSN__c</fullName>
        <label>Last 4 SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_DBA__c</fullName>
        <label>Legal Name/DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Bill_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List Bill Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Bill_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>List Bill Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Partner, Dependent, Primary Member</value>
            </filterItems>
            <infoMessage>Producer must be List Bill certified</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (List Bill Producer)</relationshipLabel>
        <relationshipName>OpportunitiesWe5b</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Please choose an option before marking the opportunity as lost.</inlineHelpText>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All efforts extended, no response</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>Opened in error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-responsive</fullName>
                    <isActive>false</isActive>
                    <label>No Decision / Non-responsive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGP2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGP2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (MGP2)</relationshipLabel>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MGP2_percent__c</fullName>
        <label>MGP2 %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MGP2_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (MGP)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MGP_percent__c</fullName>
        <label>MGP %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MGP_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Comm_percentage__c</fullName>
        <label>Monthly Admin Comm %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Fee_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Admin Fee Paid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Monthly Admin Paid)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Fee__c</fullName>
        <label>Monthly Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Contribution__c</fullName>
        <label>Monthly Contribution</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Memberships__c</fullName>
        <label>Monthly Memberships</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Invoices__c</fullName>
        <inlineHelpText>100 EE min. per location</inlineHelpText>
        <label>Multiple Invoices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Executed_Date__c</fullName>
        <label>NDA Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDA_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPN_No__c</fullName>
        <description>National Producer Number</description>
        <label>NPN No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Loss_Letter_Received_Date__c</fullName>
        <label>No Loss Letter Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Loss_Letter_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Loss Letter Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Projected_Members__c</fullName>
        <label>No. Of Projected Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Producers__c</fullName>
        <label>No. of Producers</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Admin_Fee__c</fullName>
        <label>One Time Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMO_Required__c</fullName>
        <label>PMO Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Time_Employees__c</fullName>
        <label>Part Time Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Enrolling__c</fullName>
        <label>Person Enrolling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OSH</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Latin/Spanish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Producer2)</relationshipLabel>
        <relationshipName>Opportunities5k0H</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer2_percent__c</fullName>
        <label>Producer2 %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Producer2_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producer Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Producer)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_percent__c</fullName>
        <label>Producer %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Producer_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Close_Date__c</fullName>
        <label>Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referral)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_percent__c</fullName>
        <label>Referral %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales,Regional Sales Director</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Referral</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID_in_Admin123__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please upload Salesforce ID for the ACCOUNT (not Opportunity) into Admin123 for the Producer. It will start with &apos;001&apos; and look like: 001XXXXXXXXXXXX.</inlineHelpText>
        <label>Salesforce ID in Admin123</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasonal_Employees__c</fullName>
        <label>Seasonal Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servicing_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_Up_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set up group in Admin123.</inlineHelpText>
        <label>Set Up Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales,Regional Sales Director,State Sales Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Passed_Date__c</fullName>
        <label>Test Passed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Contributions__c</fullName>
        <formula>Total_Monthly_Contributions__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Contributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Comm_percentage__c</fullName>
        <formula>(
IF(ISNUMBER(Text(Affinity_percent__c)),VALUE(Text(Affinity_percent__c)),0) + 
IF(ISNUMBER(Text(Call_Center_percent__c)),VALUE(Text(Call_Center_percent__c)),0) + 
IF(ISNUMBER(Text(FMO_percent__c)),VALUE(Text(FMO_percent__c)),0) + 
IF(ISNUMBER(Text(MGP_percent__c)),VALUE(Text(MGP_percent__c)),0) + 
IF(ISNUMBER(Text(MGP2_percent__c)),VALUE(Text(MGP2_percent__c)),0) + 
IF(ISNUMBER(Text(Producer_percent__c)),VALUE(Text(Producer_percent__c)),0) + 
IF(ISNUMBER(Text(Producer2_percent__c)),VALUE(Text(Producer2_percent__c)),0) + 
IF(ISNUMBER(Text(Referral_percent__c)),VALUE(Text(Referral_percent__c)),0)
)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Comm %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>